# vmpilot

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  _config.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pyrightconfig.json  pytest.ini  release-notes.md  requirements-dev.txt  requirements.txt
.git-hooks/: README.md  pre-commit  setup.sh
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: documentation.yml  release.yml  testing.yml
.vmpilot/prompts/: project.md
cli/: index.html
coding/: index.html
configuration/: index.html
cost-tracking/: index.html
dns_ssl_setup/: index.html
docker/: .dockerignore  Dockerfile  README.md  container.sh  docker-compose.yml  docker_dev_build.sh  docker_dev_cleanup.sh  docker_dev_run.sh  start.sh  supervisord.conf
docs/: TODO.md  chain.md  dns_ssl_setup.md  installation.md  mkdocs.yml
docs/architecture/: CODESEARCH_INTEGRATION.md  README.md  SQLite_Persistence_Implementation.md  code_retrieval.md  coverage.md  exchange_integration.md  files.md  flow.md  migrations.md  overview.md  searchtool.md  system_architecture.md
docs/prompts/: example.md
docs/source/: cli.md  coding.md  configuration.md  cost-tracking.md  dns_ssl_setup.md  getting-started.md  git-tracking.md  github_issues.md  index.md  installation.md  integrated_webui.md  plugins.md  prompting.md  release-process.md  tips.md  user-guide.md  using-webui.md
docs/tools/: ragcode.md
examples/: index.html  out
examples/fizzbuzz/: index.html
examples/github-issue/: index.html
examples/hello-world/: index.html
examples/template/: index.html
examples/todo1/: index.html
examples/todo2/: index.html
getting-started/: index.html
getting-started/installation/: index.html
git-hooks/: README.md  pre-commit  setup.sh
git-tracking/: index.html
github_issues/: index.html
installation/: index.html
olddocs/: DEPENDENCIES.md  cycle.md  installation.md
plugins/: index.html
plugins/branch-manager/: index.html
plugins/documentation/: index.html
plugins/github/: index.html
plugins/overview/: index.html
plugins/project/: index.html
plugins/testing/: index.html
plugins/unit_testing/: index.html
prompting/: index.html
release-process/: index.html
reports/: .gitignore  README.md
search/: search_index.json
sh/: createBranch.sh  delBranch.sh  docker_ghcr.sh  featureMergeToDev.sh  freeze_deps.sh  lint.sh  prepare-release.sh  setup_hooks.sh
src/codesearch/: README.md  __init__.py  build_execute.py  gemini_cache.py  gemini_prompt.md  optimize.py  search.py  searchconfig.yaml  test_gemini_cash.py  usage.py  utils.py
src/ragcode/: README.md  __init__.py  build_index.py  chunk.py  enhanced_code_splitter.py  indexer.py  retriever.py
src/vmpilot/: ATTRIBUTION.md  README.md  __init__.py  agent.py  agent_logging.py  agent_memory.py  chat.py  cli.py  cli.py.orig  cli.sh  compute.py  config.ini  config.py  custom_chat.py  env.py  exchange.py  fence.py  git_track.py  init_agent.py  lang.py  llm_wrapper.py  logger.py  logging_config.py  loop.py  persistent_memory.py  project.py  prompt.py  prompt_cache.py  request.py  response.py  setup_shell.py  streamlit.py  unified_memory.py  usage.py  utils.py  vmpilot.py  worker_llm.py
tests/: README.md  combine_coverage.sh  coverage.sh  e2e_tests.sh  harness.sh  out  parallel_harness.sh  pyright.sh  run_all_tests.sh  type_check.sh
tests/edit/: instructions.md
tests/sample_files/: test1.txt  test2.py  test_commands.txt
tests/scripts/: api_integration.sh  chat_e2e.sh  check_content.sh  cli_coverage_test.sh  cli_error_handling_test.py  comprehensive_cli_test.py  conversation_handling.sh  conversation_persistence.sh  create_edit_file.sh  direct_cli_test.py  error_handling.sh  file_handling_test.py  ls_files.sh  main_function_test.py  modify_file.sh  run_all_cli_tests.sh  run_cli.sh  test_chat_flag.sh  test_code_retrieval_sqlite_path.sh  test_google_gemini.sh  test_google_search.sh  test_search_integration.sh  test_worker_llm.py  test_worker_llm.sh  test_worker_llm_cli.sh  threading_async.sh  worker_llm_patch.py
tests/unit/: README.md  README_git_track_tests.md  conftest.py  patched_pipe.py  pipeline_test_adapter.py  test_agent_memory.py  test_chat_db_integration.py  test_chat_dir_errors.py  test_chat_history_persistence.py  test_chat_id.py  test_code_retrieval.py  test_code_retrieval_integration.py  test_config.py  (+31 more)
tips/: index.html
user-guide/: index.html
using-webui/: index.html
(+106 files in other folders)
