[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmpilot"
version = "0.1.0"
authors = [
  { name="Dror Matalon" },
]
description = "AI-driven system operations and development assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "pygments>=2.15.0",
    "asyncio>=3.4.3",
    "langchain>=0.3.21",
    "anthropic>=0.49.0",
    "langchain-openai>=0.3.11",
    "langgraph>=0.0.20",
    "langchain-anthropic>=0.3.10",
    "langchain-core>=0.3.49",
    "langchain-google-genai>=2.1.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/drorm/vmpilot"
Issues = "https://github.com/drorm/vmpilot/issues"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
