[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmpilot"
version = "0.1.0"
authors = [
  { name="Dror Matalon" },
]
description = "AI-driven system operations and development assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "langchain>=0.3.22",
    "anthropic>=0.49.0",
    "langchain-openai>=0.3.11",
    "langgraph>=0.0.20",
    "langchain-anthropic>=0.3.10",
    "langchain-core>=0.3.49",
    "langchain-google-genai>=2.1.2",
    "coverage>=7.3.0",
    "litellm>=1.0.0",
    "langchain-google-community>=0.0.10",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",  # Keeping mypy for now during transition
    "pyright>=1.1.358",  # Added pyright for faster type checking
]

[project.urls]
Homepage = "https://github.com/drorm/vmpilot"
Issues = "https://github.com/drorm/vmpilot/issues"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.deptry]
ignore = ["DEP003"]
pep621_dev_dependency_groups = ["dev"]

[tool.mypy]
python_version = "3.11"
strict = true
cache_dir = "/tmp/mypy_cache"
incremental = true
exclude = [
    "src/vmpilot/caching/chat_models.py",
    "src/vmpilot/tools/edit_diff.py",
    "tests/",  # Exclude tests for now until types are fixed
    "build/",
    "dist/"
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
implicit_reexport = false
namespace_packages = true
explicit_package_bases = true

# Plugin settings
[[tool.mypy.overrides]]
module = "pydantic.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "langchain.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "fastapi.*"
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
